# PPC_utils4BigData

./: .gitignore  README.md  bench_PPC.py  bench_git_pack.py  bench_single_blob.py  download_dataset.py  download_from_list.py  generate_tar_archive.py  list_from_dir.py  requirements.txt  requirements_full.txt  utils.py
compressor_flags/: README.md  gzip_6  gzip_max  pzstd_12_p16  pzstd_19_p16  pzstd_22_p16  xz_e9  xz_e9_T16  zstd_12  zstd_12_T16  zstd_12_T16_plain  zstd_12_nl_T16  zstd_12_plain  zstd_19_T16  zstd_19_nl_T16  zstd_22  zstd_22_T16  zstd_22_T16_plain  zstd_22_T32  zstd_22_T64  zstd_22_plain  zstd_3  zstd_3_T16  zstd_3_T2  zstd_3_T4  zstd_3_T8  zstd_3_plain  zstd_enea  zstd_enea_12  zstd_enea_12_T16  zstd_enea_T16  zstd_fast  zstd_fast_T16
dataset_generation/: download_repos.py  generate_list.py  github-ranking-2022-10-10 sizes.csv  github-ranking-2022-10-10.csv  merge_repos.py  repos-C-25GiB.csv  repos-Python-25GiB.csv
examples/: C_small.csv  Python_small.csv  random_small.csv
rocksdb_integration/: CMakeLists.txt  PPC_access.cpp  bench_full.sh
rocksdb_integration/examples/: CMakeLists.txt
sdsl_integration/: CMakeLists.txt  main.cpp
